// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Nav JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript methods
  </h2>
  <JavascriptDocs
    close={true}
    componentName="nav"
    open={true}
  />
</Fragment>
`;

exports[`Component: Nav StandardNav renders 1`] = `
Array [
  <h2
    id="nav-standard"
  >
    Standard nav
  </h2>,
  <p>
    To use our reccommended nav add 
    <code
      className="code-tags code-tags-secondary"
    >
      .nav
    </code>
     
    and 
    <code
      className="code-tags code-tags-secondary"
    >
      .nav-&lt;desired_size&gt;-vertical-wide
    </code>
    . This gives you a nav with a breakpoint at the size set in the class name. In the example we use 
    <code
      className="code-tags code-tags-secondary"
    >
      lg
    </code>
    , resize this window to see it in action.
  </p>,
  <p>
    When the nav is in mobile view it will hide menu elements if they total more than 5. Menu elements with a submenu will also be hidden and only viewable when the nav is expanded.
  </p>,
  <div
    className="showcase-panel"
  >
    <nav
      className="nav nav-lg-vertical-wide"
    >
      <ul>
        <li>
          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-home small"
            />
            

            <span>
              Home
            </span>
            

          </a>
          

        </li>
        <li>
          

          <div
            className="submenu"
          >
            

            <a
              href="#"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="at-shop-cart small"
              />
              

              <span>
                Transactions
              </span>
              

            </a>
            <ul>
              <li
                className={null}
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <span>
                    Purchase history
                  </span>
                </a>
              </li>
              <li
                className={null}
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <span>
                    Invoice
                  </span>
                </a>
              </li>
            </ul>
          </div>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-bell-reminder small"
            />
            

            <span>
              Notifications
            </span>
            

          </a>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-language-translation small"
            />
            

            <span>
              Language
            </span>
            

          </a>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-building-column small"
            />
            

            <span>
              Account
            </span>
            

          </a>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-fingerprint small"
            />
            

            <span>
              Authentication
            </span>
            

          </a>
          

        </li>
      </ul>
    </nav>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

                8
                

                9
                

                10
                

                11
                

                12
                

                13
                

                14
                

                15
                

                16
                

                17
                

                18
                

                19
                

                20
                

                21
                

                22
                

                23
                

                24
                

                25
                

                26
                

                27
                

                28
                

                29
                

                30
                

                31
                

                32
                

                33
                

                34
                

                35
                

                36
                

                37
                

                38
                

                39
                

                40
                

                41
                

                42
                

                43
                

                44
                

                45
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;nav class="nav nav-lg-vertical-wide"&gt;
                

                    &lt;ul&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#" class="active"&gt;
                

                                &lt;i class="at-home small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Home&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;div class="submenu"&gt;
                

                                &lt;a href="#"&gt;&lt;i class="at-shop-cart small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                    &lt;span&gt;Transactions&lt;/span&gt;
                

                                &lt;/a&gt;
                

                                &lt;ul&gt;
                

                                    &lt;li&gt;&lt;a href="#"&gt;&lt;span&gt;Purchase history&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
                

                                    &lt;li&gt;&lt;a href="#"&gt;&lt;span&gt;Invoice&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
                

                                &lt;/ul&gt;
                

                            &lt;/div&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-bell-reminder small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Notifications&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-language-translation small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Language&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-building-column small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Account&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-fingerprint small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Authentication&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                    &lt;/ul&gt;
                

                &lt;/nav&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Component: Nav WithIconsOnly renders 1`] = `
Array [
  <h2
    id="icons-only"
  >
    Icons only
  </h2>,
  <p>
    If you want to show only icons at a certain breakpoint then include
     
    <code
      className="code-tags code-tags-secondary"
    >
      .nav-&lt;desired_size&gt;-vertical
    </code>
     with your nav component.
  </p>,
  <div
    className="showcase-panel"
  >
    <nav
      className="nav nav-md-vertical nav-lg-vertical-wide"
    >
      <ul>
        <li>
          

          <a
            className="active"
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-home small"
            />
            

            <span>
              Home
            </span>
            

          </a>
          

        </li>
        <li>
          

          <div
            className="submenu"
          >
            

            <a
              href="#"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="at-shop-cart small"
              />
              

              <span>
                Transactions
              </span>
              

            </a>
            <ul>
              <li
                className={null}
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <span>
                    Purchase history
                  </span>
                </a>
              </li>
              <li
                className={null}
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  <span>
                    Invoice
                  </span>
                </a>
              </li>
            </ul>
          </div>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-bell-reminder small"
            />
            

            <span>
              Notifications
            </span>
            

          </a>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-language-translation small"
            />
            

            <span>
              Language
            </span>
            

          </a>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-building-column small"
            />
            

            <span>
              Account
            </span>
            

          </a>
          

        </li>
        <li>
          

          <a
            className={null}
            href="#"
            onClick={[Function]}
          >
            

            <i
              aria-hidden="true"
              className="at-fingerprint small"
            />
            

            <span>
              Authentication
            </span>
            

          </a>
          

        </li>
      </ul>
    </nav>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

                8
                

                9
                

                10
                

                11
                

                12
                

                13
                

                14
                

                15
                

                16
                

                17
                

                18
                

                19
                

                20
                

                21
                

                22
                

                23
                

                24
                

                25
                

                26
                

                27
                

                28
                

                29
                

                30
                

                31
                

                32
                

                33
                

                34
                

                35
                

                36
                

                37
                

                38
                

                39
                

                40
                

                41
                

                42
                

                43
                

                44
                

                45
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;nav class="nav nav-md-vertical nav-lg-vertical-wide"&gt;
                

                    &lt;ul&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#" class="active"&gt;
                

                                &lt;i class="at-home small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Home&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;div class="submenu"&gt;
                

                                &lt;a href="#"&gt;&lt;i class="at-shop-cart small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                    &lt;span&gt;Transactions&lt;/span&gt;
                

                                &lt;/a&gt;
                

                                &lt;ul&gt;
                

                                    &lt;li&gt;&lt;a href="#"&gt;&lt;span&gt;Purchase history&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
                

                                    &lt;li&gt;&lt;a href="#"&gt;&lt;span&gt;Invoice&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
                

                                &lt;/ul&gt;
                

                            &lt;/div&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-bell-reminder small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Notifications&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-language-translation small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Language&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-building-column small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Account&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                        &lt;li&gt;
                

                            &lt;a href="#"&gt;
                

                                &lt;i class="at-fingerprint small" aria-hidden="true"&gt;&lt;/i&gt;
                

                                &lt;span&gt;Authentication&lt;/span&gt;
                

                            &lt;/a&gt;
                

                        &lt;/li&gt;
                

                    &lt;/ul&gt;
                

                &lt;/nav&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Component: Nav renders 1`] = `
<DocContainer>
  <Alert
    icon="error"
    text={
      <p>
        <b>
          Deprecated:
        </b>
         Be aware, this component will not be maintained anymore. Instead, consider using the 
        <Link
          to="/components/topbar"
        >
          topbar
        </Link>
         or 
        <Link
          to="/components/sidebar"
        >
          sidebar
        </Link>
        .
      </p>
    }
    type="danger"
  />
  <p
    className="lead"
  >
    Use navs to create a basic navigational element containing links.
  </p>
  <StandardNav />
  <WithIconsOnly />
  <JavascriptMethods />
  <NpmInformation
    componentName="nav"
  />
</DocContainer>
`;
